--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend",
+  "name": "Commuter",
   "version": "1.1.1",
-  "description": "frontend: An Ionic project",
+  "description": "Commuter: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
