--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "pretest": "jshint ."
   },
+  "engines":{
+    "node":"6.9.1"
+  },
   "dependencies": {
     "compression": "^1.0.3",
     "errorhandler": "^1.1.1",
@@ -19,5 +22,11 @@
   },
   "devDependencies": {
     "jshint": "^2.5.6"
-  }
+  },
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+   "license": "UNLICENSED",
+  "description": ""
 }
